--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>DAJ's page</title>
+        <title>Milky Way Webpage</title>
         <link rel="stylesheet" href="styles.css"></link>
     </head>
     <body>
@@ -19,6 +19,6 @@
                 <div class="neptune planet"></div>
             </div>
         </div>
-        <script type='text/javascript' src="/myScript.js"></script>
+        <script type='text/javascript' src="myScript.js"></script>
     </body>
 </html>
