--- a/index.html
+++ b/index.html
@@ -3,20 +3,38 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Milky Way Webpage</title>
+        <title>DAJ's page</title>
         <link rel="stylesheet" href="styles.css"></link>
     </head>
     <body>
+        <div id="line"></div>
+        <div id="focus-layer"></div>
         <div class="hover-planets" id="hover-planets">
-            <div class="planets" id="planets">
-                <div class="mercury planet"></div>
-                <div class="venus planet"></div>
-                <div class="earth planet"></div>
-                <div class="mars planet"></div>
-                <div class="jupiter planet"></div>
-                <div class="saturn planet"></div>
-                <div class="uranus planet"></div>
-                <div class="neptune planet"></div>
+            <div class="planets" id="planets" data-mouse-down-at="0" data-prev-percentage="0" data-percentage="0">
+                <div class="planet-container">
+                    <div class="mercury planet"></div>
+                </div>
+                <div class="planet-container">
+                    <div class="venus planet"></div>
+                </div>
+                <div class="planet-container">
+                    <div class="earth planet"></div>
+                </div>
+                <div class="planet-container">
+                    <div class="mars planet"></div>
+                </div>
+                <div class="planet-container">
+                    <div class="jupiter planet"></div>
+                </div>
+                <div class="planet-container">
+                    <div class="saturn planet"></div>
+                </div>
+                <div class="planet-container">
+                    <div class="uranus planet"></div>
+                </div>
+                <div class="planet-container">
+                    <div class="neptune planet"></div>
+                </div>
             </div>
         </div>
         <script type='text/javascript' src="myScript.js"></script>
