Fixed distance for planets + blackhole
Blackhole
Planet distance fixed
All planet highlights are reset when no planet is on focus

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
         <link rel="stylesheet" href="styles.css"></link>
     </head>
     <body>
+        <div id="background-space">
+            <div class="blackhole-container">
+                <div class="blackhole"></div>
+                <div class="blackhole-rings-filter">
+                    <div class="blackhole-rings ring5"></div>
+                    <div class="blackhole-rings ring4"></div>
+                    <div class="blackhole-rings ring3"></div>
+                    <div class="blackhole-rings ring2"></div>
+                    <div class="blackhole-rings ring1"></div>
+                </div>
+            </div>
+        </div>
         <div id="line"></div>
         <div id="focus-layer"></div>
         <div class="hover-planets" id="hover-planets">
